--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/storage": "^2.1.3",
     "angular-datatables": "^5.0.0",
     "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -69,7 +70,8 @@
       "cordova-plugin-request-location-accuracy": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
