--- a/package.json
+++ b/package.json
@@ -21,28 +21,31 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/core": "4.7.0",
-    "@ionic-native/diagnostic": "^4.7.0",
-    "@ionic-native/geolocation": "^4.7.0",
-    "@ionic-native/location-accuracy": "^4.7.0",
+    "@ionic-native/background-mode": "^4.11.0",
+    "@ionic-native/core": "^4.11.0",
+    "@ionic-native/diagnostic": "^4.11.0",
+    "@ionic-native/geolocation": "^4.11.0",
+    "@ionic-native/location-accuracy": "^4.11.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
-    "angular-datatables": "^5.0.0",
+    "angular-datatables": "^5.1.0",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-request-location-accuracy": "^2.2.2",
+    "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.1",
-    "cordova.plugins.diagnostic": "^4.0.5",
-    "datatables.net": "^1.10.16",
-    "datatables.net-dt": "^1.10.16",
+    "cordova-sqlite-storage": "^2.3.3",
+    "cordova.plugins.diagnostic": "^4.0.8",
+    "core-js": "^2.4.1",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "jquery": "^3.3.1",
@@ -51,9 +54,10 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@angular/cli": "^6.1.1",
     "@ionic/app-scripts": "3.1.9",
-    "@types/datatables.net": "^1.10.9",
-    "@types/jquery": "^3.3.1",
+    "@types/datatables.net": "^1.10.12",
+    "@types/jquery": "^3.3.5",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -67,7 +71,8 @@
       "cordova-plugin-geolocation": {},
       "cordova-sqlite-storage": {},
       "cordova.plugins.diagnostic": {},
-      "cordova-plugin-request-location-accuracy": {}
+      "cordova-plugin-request-location-accuracy": {},
+      "cordova-plugin-background-mode": {}
     },
     "platforms": [
       "android",
