--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/core": "^4.11.0",
     "@ionic-native/diagnostic": "^4.11.0",
     "@ionic-native/geolocation": "^4.11.0",
+    "@ionic-native/insomnia": "^4.11.0",
     "@ionic-native/location-accuracy": "^4.11.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
@@ -36,6 +37,7 @@
     "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-request-location-accuracy": "^2.2.3",
@@ -74,7 +76,8 @@
       "cordova-sqlite-storage": {},
       "cordova.plugins.diagnostic": {},
       "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-background-mode": {}
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-insomnia": {}
     },
     "platforms": [
       "android",
