--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/diagnostic": "^4.11.0",
     "@ionic-native/geolocation": "^4.11.0",
     "@ionic-native/insomnia": "^4.11.0",
+    "@ionic-native/local-notifications": "^4.11.0",
     "@ionic-native/location-accuracy": "^4.11.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
@@ -35,11 +36,13 @@
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-background-mode": "^0.7.2",
+    "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -77,7 +80,8 @@
       "cordova.plugins.diagnostic": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-background-mode": {},
-      "cordova-plugin-insomnia": {}
+      "cordova-plugin-insomnia": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android",
