--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "core-js": "^2.4.1",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
+    "firebase": "^4.8.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "jquery": "^3.3.1",
