--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "jquery": "^3.3.1",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova-plugin-mauron85-background-geolocation": "~2.3.5"
   },
   "devDependencies": {
     "@angular/cli": "^6.1.1",
