--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/background-geolocation": "^4.11.0",
+    "@ionic-native/background-geolocation": "^4.12.0",
     "@ionic-native/background-mode": "^4.11.0",
     "@ionic-native/core": "^4.11.0",
     "@ionic-native/diagnostic": "^4.11.0",
@@ -34,21 +34,19 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
     "angular-datatables": "^5.1.0",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^7.1.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-background-mode": "^0.7.2",
-    "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-mauron85-background-geolocation": "~2.3.5",
     "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.3",
-    "cordova.plugins.diagnostic": "^4.0.8",
     "core-js": "^2.4.1",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
@@ -58,8 +56,7 @@
     "jquery": "^3.3.1",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "cordova-plugin-mauron85-background-geolocation": "~2.3.5"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "^6.1.1",
@@ -80,12 +77,19 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To track your walks"
       },
       "cordova-sqlite-storage": {},
-      "cordova.plugins.diagnostic": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-insomnia": {},
-      "cordova-plugin-local-notification": {},
       "cordova-plugin-background-mode": {},
-      "cordova-plugin-mauron85-background-geolocation": {}
+      "cordova-plugin-mauron85-background-geolocation": {
+        "GOOGLE_PLAY_SERVICES_VERSION": "11+",
+        "ANDROID_SUPPORT_LIBRARY_VERSION": "23+",
+        "ICON": "@mipmap/icon",
+        "SMALL_ICON": "@mipmap/icon",
+        "ACCOUNT_NAME": "@string/app_name",
+        "ACCOUNT_LABEL": "@string/app_name",
+        "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+        "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+      }
     },
     "platforms": [
       "android",
