--- a/package.json
+++ b/package.json
@@ -34,12 +34,10 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
     "angular-datatables": "^5.1.0",
-    "cordova-android": "^7.1.0",
+    "cordova-android": "7.0.0",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-mauron85-background-geolocation": "~2.3.5",
@@ -78,8 +76,6 @@
       },
       "cordova-sqlite-storage": {},
       "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-insomnia": {},
-      "cordova-plugin-background-mode": {},
       "cordova-plugin-mauron85-background-geolocation": {
         "GOOGLE_PLAY_SERVICES_VERSION": "11+",
         "ANDROID_SUPPORT_LIBRARY_VERSION": "23+",
@@ -92,8 +88,8 @@
       }
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
