--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
     "angular-datatables": "^5.1.0",
+    "cordova": "^7.1.0",
     "cordova-android": "7.1.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
@@ -41,10 +42,11 @@
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-mauron85-background-geolocation": "^2.3.5",
     "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.3",
+    "cordova-sqlite-storage": "^2.4.0",
     "core-js": "^2.4.1",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
@@ -53,8 +55,7 @@
     "jquery": "^3.3.1",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "cordova-plugin-mauron85-background-geolocation": "~2.3.5"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "^6.1.1",
@@ -77,7 +78,16 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-insomnia": {},
-      "cordova-plugin-mauron85-background-geolocation": {}
+      "cordova-plugin-mauron85-background-geolocation": {
+        "GOOGLE_PLAY_SERVICES_VERSION": "11+",
+        "ANDROID_SUPPORT_LIBRARY_VERSION": "23+",
+        "ICON": "@mipmap/icon",
+        "SMALL_ICON": "@mipmap/icon",
+        "ACCOUNT_NAME": "@string/app_name",
+        "ACCOUNT_LABEL": "@string/app_name",
+        "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+        "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+      }
     },
     "platforms": [
       "ios",
