--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@ionic/storage": "^2.1.3",
     "angular-datatables": "^5.1.0",
     "cordova": "^7.1.0",
-    "cordova-android": "7.1.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -55,7 +54,8 @@
     "jquery": "^3.3.1",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova-android": "~7.1.0"
   },
   "devDependencies": {
     "@angular/cli": "^6.1.1",
