--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "@ionic/storage": "^2.1.3",
     "angular-datatables": "^5.1.0",
     "cordova": "^7.1.0",
+    "cordova-android": "7.1.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-mauron85-background-geolocation": "^2.3.5",
+    "cordova-plugin-mauron85-background-geolocation": "^2.3.6",
     "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -54,8 +55,7 @@
     "jquery": "^3.3.1",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "cordova-android": "~7.1.0"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "^6.1.1",
