--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@ionic/storage": "^2.1.3",
     "angular-datatables": "^5.1.0",
     "cordova": "^7.1.0",
-    "cordova-android": "7.1.0",
+    "cordova-android": "^7.1.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -60,6 +60,8 @@
   "devDependencies": {
     "@angular/cli": "^6.1.1",
     "@ionic/app-scripts": "3.1.9",
+    "@ionic/cli-plugin-cordova": "1.6.2",
+    "@ionic/cli-plugin-ionic-angular": "1.4.1",
     "@types/datatables.net": "^1.10.12",
     "@types/jquery": "^3.3.5",
     "typescript": "~2.6.2"
@@ -90,8 +92,8 @@
       }
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
